Added an online PHP tester

--- a/My-Notes/index.html
+++ b/My-Notes/index.html
@@ -144,6 +144,7 @@ window['_fs_namespace'] = 'FS';
 <li><a href="http://jsbin.com/" target="_blank" rel="noopener">JSbin</a></li>
 <li><a href="http://sandbox.onlinephpfunctions.com/" target="_blank" rel="noopener">PHP online php functions</a></li>
 <li><a href="http://phptester.net/" target="_blank" rel="noopener">PHP tester</a></li>
+<li><a href="https://extendsclass.com/php.html" target="_blank" rel="noopener">Extendsclass's PHP tester</a></li>
 <li><a href="https://repl.it/@whearst3/Python-Sandbox" target="_blank" rel="noopener">Python repl.it</a></li>
 <li><a href="https://try.jupyter.org/" target="_blank" rel="noopener">Python jupyter/notebook</a></li>
 </ul>
